--- a/style.css
+++ b/style.css
@@ -107,18 +107,39 @@ html
     border-radius: 10px;
 
 }
+.campoInfoPizza .modalActions
+{
+    display: flex;
+    justify-content: space-between;
+    width: calc(100% - 1rem);
+    margin: auto;
+}
 .campoInfoPizza .closeModal
 {
-    background-color: lightpink;
+    color: rgb(0, 0, 0);
     padding: 1rem;
     border-radius: 10px;
     width: 100px;
-    margin: 0.5rem;
+    margin: 1rem;
     cursor: pointer;
 }
 .campoInfoPizza .closeModal:hover
 {
-    background-color: rgb(172, 130, 136);
+    background-color: rgb(124, 0, 19);
+}
+.campoInfoPizza .buy
+{
+    background-color: rgb(6, 187, 60);
+    color: #fff;
+    padding: 1rem;
+    border-radius: 10px;
+    width: 100px;
+    margin: 1rem;
+    cursor: pointer;
+}
+.campoInfoPizza .buy:hover
+{
+    background-color: rgb(0, 124, 56);
 }
 h1
 {
@@ -280,7 +301,7 @@ h1
         flex-direction: column;
         width: 100%;
         height: 380px;
-        padding: 1rem 0;
+        padding: 2rem 0;
     }
     .q2
     {
